# learning-loop

./: .gitignore  README.md  pyproject.toml
frontend/: package-lock.json  package.json  server.mjs  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  style.css
frontend/src/pages/: Dashboard.tsx  Experiment.tsx  Reviews.tsx  Unit.tsx  Units.tsx
scripts/: reminder.py  wechat-reminder.mjs
skills/learning-loop/: SKILL.md
skills/learning-loop/scripts/: learning_loop.py
skills/wechat-reminder/: SKILL.md
src/learning_loop/: api.py  cli.py  db.py  domain.py  review.py  service.py
src/learning_loop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_flow.py
